# bonkio-rl

./: .gitignore  README.md  STATUS.md  index.html  main.js  styles.css
.github/workflows/: static.yml
1-gemini3/: index.html
physics-extractor/: 0.js  1.js  2.js  PHYSICS.md  analyze_jumps.py  data-recorder.js
physics-extractor/data/0-tap-up/: bonk_jump_map_size_1.csv  bonk_jump_map_size_12.csv  bonk_jump_map_size_13.csv  bonk_jump_map_size_2.csv  bonk_jump_map_size_3.csv  bonk_jump_map_size_4.csv  bonk_jump_map_size_6.csv  bonk_jump_map_size_9.csv
physics-extractor/data/0-tap-up/archive/: 1765445704.json
physics-extractor/data/1-hold-up/: size11.csv  size2.csv  size4.csv  size6.csv
physics-extractor/data/2-hold-horizontal/: 11.csv  13.csv  5.csv  9.csv
physics-extractor/data/3-tap-horizontal/: 11-left.csv  2-right.csv  5-left-0.csv  5-left-1.csv  5-right-2.csv
physics-extractor/demo/: index.html  intag.html  rl_policy.js  sandbox.js  tag.html
rl-tag/: README.md  pyproject.toml
rl-tag/bonk_rl/: __init__.py  physics.py  policy.py
rl-tag/results/: pool_smoke_matrix.csv  pool_smoke_matrix_fast.csv
rl-tag/scripts/: evaluate.py  evaluate_matrix.py  export_policy_json.py  train_pufferlib_role.py  train_self_play.py
