[project]
name = "bonk-tag-rl"
version = "0.1.0"
description = "Self-play RL for Bonk-style tag using extracted physics"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "torch>=2.4",
  "gymnasium>=0.29",
  "tqdm>=4.66",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
puffer = [
  "pufferlib>=2.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bonk_rl"]
